add guilds endpoint, add guilds view

--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -15,10 +15,12 @@ html, body
 h1, h2, h3, h4, h5, h6
     font-family: 'Montserrat', sans-serif
     font-weight: 200
+    margin: 0 !important
 
 a
     color: $c-font-general !important
     text-decoration: none !important
+    cursor: pointer
 
 button
     background-color: $c-blurple
