--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,3 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div id="toasts-container">
+    <app-toast 
+        *ngFor="let t of toasts.toasts"
+        [heading]="t.heading" 
+        [color]="t.type" 
+        [delay]="t.delay"
+        [closable]="t.closable"
+        (hidden)="toasts.remove(t)"
+    >
+        {{ t.text }}
+    </app-toast>
+</div>
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="p-3">
+    <router-outlet></router-outlet>
+</div>
