--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -1,5 +1,5 @@
-@import '../../sass/vars'
-@import '../../sass/mixins'
+@import '../../../sass/vars'
+@import '../../../sass/mixins'
     
 #header
     height: 50px
@@ -24,4 +24,3 @@
         p
             +my-auto
             margin-right: 15px
-
