add get guild endpoint and add guild page

--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -10,7 +10,7 @@
     .avatar
         height: 30px
         width: 30px
-        border-radius: 50%
+        +round
         +my-auto
 
     #heading
