--- a/web/src/app/components/toast/toast.component.sass
+++ b/web/src/app/components/toast/toast.component.sass
@@ -34,6 +34,7 @@
 
 .toast-container
     width: 100%
+    overflow: hidden
     background-color: white
     color: black
     padding: 5px 10px
@@ -44,6 +45,8 @@
     .heading
         display: flex
         border-bottom: solid 1px black
+        margin-bottom: 8px
+        padding-bottom: 8px
 
         .close-btn
             margin-right: 0px
