--- a/web/src/sass/mixins.sass
+++ b/web/src/sass/mixins.sass
@@ -2,9 +2,12 @@
     transition: $prop .25s ease-in-out
 
 =my-auto
-    margin-top: auto
-    margin-bottom: auto
+    margin-top: auto !important
+    margin-bottom: auto !important
 
 =mx-auto
-    margin-left: auto
-    margin-right: auto
+    margin-left: auto !important
+    margin-right: auto !important
+
+=round
+    border-radius: 50%
