--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -33,3 +33,12 @@ button
     &:hover
         background-color: darken($c-blurple, 5)
         transform: translateY(-2px)
+
+
+//-----------------------------------
+
+.embeded
+    padding: 2px 5px
+    background-color: rgba(0, 0, 0, .4);
+    width: fit-content
+    border-radius: 5px;
