--- a/web/src/app/routes/home/home.component.html
+++ b/web/src/app/routes/home/home.component.html
@@ -1,12 +1,12 @@
-<div id="" class="">
+<div>
     <app-spinner id="spinner-load-guilds" [started]="true"></app-spinner>
-    <div class="container-fluid d-flex">
-        <div *ngFor="let g of guilds" class="guild-container">
+    <div class="guilds-list-container">
+        <a *ngFor="let g of guilds" class="guild-container" routerLink="/guilds/{{ g.id }}">
             <img [src]="g.icon ? g.icon_url : '/assets/dc-logo.svg'"/>
             <div class="info-container">
                 <h1>{{ g.name }}</h1>
                 <p>{{ g.member_count }} members</p>
             </div>
-        </div>
+        </a>
     </div>
 </div>
