--- a/web/src/app/routes/home/home.component.sass
+++ b/web/src/app/routes/home/home.component.sass
@@ -1,13 +1,17 @@
 @import '../../../sass/vars'
 @import '../../../sass/mixins'
     
+.guilds-list-container
+    display: flex
+    flex-wrap: wrap
+
 .guild-container
     display: flex
     background-color: $c-nqblack
     width: fit-content
     min-width: 300px
     height: 60px
-    margin-right: 20px
+    margin: 0 20px 20px 0
     border-radius: 5px
     overflow: hidden
     cursor: pointer
@@ -30,3 +34,4 @@
             font-size: 18px
         p
             font-size: 14px
+            color: #BDBDBD
