--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -39,6 +39,6 @@ button
 
 .embeded
     padding: 2px 5px
-    background-color: rgba(0, 0, 0, .4);
+    background-color: rgba(0, 0, 0, .4)
     width: fit-content
-    border-radius: 5px;
+    border-radius: 5px
