--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-header id="header"></app-header>
 <div id="toasts-container">
     <app-toast 
         *ngFor="let t of toasts.toasts"
@@ -11,7 +12,6 @@
         {{ t.text }}
     </app-toast>
 </div>
-<app-header></app-header>
 <div class="p-3">
     <router-outlet></router-outlet>
 </div>
