--- a/web/src/app/app.component.sass
+++ b/web/src/app/app.component.sass
@@ -4,6 +4,6 @@
     width: 50vw
     max-width: 300px
     height: 100vw
-    z-index: 10
-    top: 15px
+    z-index: 5
+    top: 15px + 50px
     right: 15px
