--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -1,11 +1,32 @@
 @import '../../../sass/vars'
 @import '../../../sass/mixins'
     
+.logout-popup
+    position: absolute
+    z-index: 10
+    transform: translateY(30px)
+
+.popup-entry
+    display: flex
+
+    p
+        margin-left: 10px
+        margin-right: 0 !important
+
+    img
+        width: 15px
+        height: 15px
+        +my-auto
+
 #header
     height: 50px
     display: flex
     background-color: $c-nqblack
     padding: 10px 10px
+
+    h1
+        font-size: 26px
+        +my-auto
 
     .avatar
         height: 30px
@@ -20,6 +41,15 @@
     #user-info
         margin-right: 0
         margin-left: auto
+
+        .logout-btn
+            font-size: 12px;
+            margin-right: 10px;
+            border-radius: 3px;
+            background-color: rgba(0, 0, 0, .4)
+            padding: 5px 10px;
+            cursor: pointer
+            +my-auto
 
         p
             +my-auto
