--- a/web/src/app/routes/login/login.component.html
+++ b/web/src/app/routes/login/login.component.html
@@ -1,5 +1,5 @@
 <div id="login" class="container-fluid text-center d-flex">
-    <div class="container-fluid my-auto">
+    <div class="container-fluid">
         <h1>LOGIN</h1>
         <p>You need to be logged in to use shinpurus web interface.</p>
         <a href="/_/loginwithdiscord"><button>LOG IN WITH YOUR DISCORD ACCOUNT</button></a>
