fix member API model and fix role component

--- a/web/src/app/components/rolebadge/rolebadge.component.html
+++ b/web/src/app/components/rolebadge/rolebadge.component.html
@@ -1,7 +1,7 @@
 <div 
     class="role-container" 
     [style.background-color]="toHexClr(role.color, .2)"
-    [style.border-color]="role.color ? toHexClr(role.color) : white"
+    [style.border-color]="role.color ? toHexClr(role.color) : 'white'"
 >
     <div
         [style.background-color]="role.color ? toHexClr(role.color) : 'white'"
