add reports endpoints and extended user view

--- a/web/src/app/components/member/member.component.html
+++ b/web/src/app/components/member/member.component.html
@@ -1,9 +1,13 @@
-<!-- TODO: Display bot badge, set color from top role -->
-
-<div class="member-container">
+<div 
+    class="member-container" 
+    [style.background-color]="getMemberColor(0.3)"
+>
     <img [src]="member.avatar_url"/>
     <div>
-        <p>{{ member.nick || member.user.username }}</p>
+        <div class="d-flex">
+            <p>{{ member.nick || member.user.username }}</p>
+            <p *ngIf="member.user.bot" class="bot-tag">BOT</p>
+        </div>
         <p class="tag">{{ member.user.username }}#{{ member.user.discriminator }}</p>
     </div>
 </div>
