--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -55,6 +55,13 @@ input[type=text]
     width: fit-content
     height: fit-content
     border-radius: 5px
+    margin: 0
 
 .overflow-wrap
     flex-wrap: wrap
+
+.font-gray
+    color: $c-font-gray
+
+.w-fc
+    width: fit-content
