--- a/web/src/app/components/member/member.component.sass
+++ b/web/src/app/components/member/member.component.sass
@@ -7,7 +7,6 @@
     margin: 0 10px 10px 0
     padding-right: 10px
     display: flex
-
     +hover-btn(1.03, 4px)
 
     p
@@ -21,3 +20,12 @@
     p.tag
         font-size: 12px
         color: $c-font-gray
+
+    .bot-tag
+        font-size: 8px
+        padding: 1px 3px
+        background-color: $c-blurple
+        height: fit-content
+        border-radius: 3px
+        margin-left: 6px !important
+        +my-auto
