--- a/web/src/app/components/report/report.component.sass
+++ b/web/src/app/components/report/report.component.sass
@@ -23,3 +23,14 @@ h4
 .small
     color: $c-font-gray
     font-size: 11px
+
+.col50
+    width: 40%
+
+.created
+    padding-top: 5px
+    border-top: solid 1px darkgrey
+    width: fit-content
+    font-size: 13px
+    margin-top: 20px
+    
