--- a/web/src/app/routes/member/member.component.sass
+++ b/web/src/app/routes/member/member.component.sass
@@ -23,8 +23,23 @@
         padding-right: 50px
         vertical-align: baseline
 
-
 .report-tile
     width: 100%
     border-radius: 5px
     background-color: $c-nqblack
+
+.reports-count
+    padding: 2px 8px
+    border-radius: 10px
+    background-color: $c-red
+    font-size: 12px
+    font-weight: bold
+    margin: 0
+    height: fit-content
+    margin-left: 10px
+    +my-auto
+
+.bot-tag
+    background-color: $c-blurple
+    padding: 2px 8px
+    border-radius: 5px
