--- a/web/src/sass/vars.sass
+++ b/web/src/sass/vars.sass
@@ -3,6 +3,7 @@ $c-blurple: #7289DA
 $c-greyple: #99AAB5
 $c-darkbnb: #2C2F33
 $c-nqblack: #23272A
+$c-red:     #e53935
 
 $c-bg-general: $c-darkbnb
 $c-font-general: white
