--- a/web/src/app/components/report/report.component.sass
+++ b/web/src/app/components/report/report.component.sass
@@ -1,6 +1,8 @@
 @import '../../../sass/vars'
 @import '../../../sass/mixins'
 
+$border-rad: 5px
+
 p
     margin: 0px
 
@@ -9,10 +11,13 @@ h4
 
 .report-container
     background-color: $c-nqblack
-    border-radius: 5px
+    border-radius: $border-rad
     width: 100%
-    padding: 10px
+    margin-bottom: 20px
  
+.inner-container
+    padding: 10px
+
 .avi
     width: 2em
     height: 2em
@@ -27,10 +32,25 @@ h4
 .col50
     width: 40%
 
-.created
+.footer
     padding-top: 5px
     border-top: solid 1px darkgrey
     width: fit-content
     font-size: 13px
     margin-top: 20px
     
+input.url
+    color: $c-blurple
+    font-weight: bold
+    text-decoration: underline
+    width: 100%
+    border: none !important
+
+.type-heading
+    width: 100%
+    text-align: center
+    padding: 3px
+    margin-bottom: 10px
+    color: $c-nqblack
+    font-weight: bold
+    border-radius: $border-rad $border-rad 0 0
