add path navigation bar to header

--- a/web/src/app/components/header/header.component.sass
+++ b/web/src/app/components/header/header.component.sass
@@ -54,3 +54,19 @@
         p
             +my-auto
             margin-right: 15px
+
+    .routes
+        display: flex
+        margin-left: 20px
+
+        a
+            padding: 3px 6px
+            background-color: rgba(0, 0, 0, .3)
+            margin-right: 5px
+            border-radius: 5px
+
+
+@media only screen and (max-width: 900px)
+    #header
+        .routes 
+            display: none
