--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -1,6 +1,16 @@
 <div id="header" class="container-fluid">
-    <img id="sp-logo" class="avatar" src="/assets/shinpuru-logo.png" />
-    <h1 class="ml-3">SHINPURU</h1>
+    <a class="d-flex" routerLink="/guilds">
+        <img id="sp-logo" class="avatar" src="/assets/shinpuru-logo.png" />
+        <h1 class="ml-3">SHINPURU</h1>
+    </a>
+    
+    <div class="routes">
+        <span *ngFor="let r of routes">
+            /
+            <a [routerLink]="r[1]">{{ r[0] }}</a>
+        </span>
+    </div>
+
     <div *ngIf="selfUser" id="user-info" class="d-flex">
         <app-popup *ngIf="popupVisible" class="logout-popup" [elements]="popupElements" (closing)="popupClose($event)"></app-popup>
         <a class="logout-btn" (click)="popupVisible = true">&#9660;</a>
