--- a/web/src/app/routes/member/member.component.sass
+++ b/web/src/app/routes/member/member.component.sass
@@ -1,6 +1,11 @@
 @import '../../../sass/vars'
 @import '../../../sass/mixins'
 
+ul
+    list-style-type: none
+    padding: 0
+    margin: 0
+
 #heading-container
     display: flex
     margin-bottom: 20px
@@ -43,3 +48,14 @@
     background-color: $c-blurple
     padding: 2px 8px
     border-radius: 5px
+
+.permissions
+    font-size: 13px
+    padding: 2px 4px
+    margin: 0px 5px 5px 0px
+
+.allowed
+    background-color: transparentize($c-green, .4)
+
+.disallowed
+    background-color: transparentize($c-red, .4)
