--- a/web/src/app/routes/member/member.component.html
+++ b/web/src/app/routes/member/member.component.html
@@ -23,11 +23,11 @@
             <tbody>
                 <tr>
                     <th>Joined Guild</th>
-                    <td>{{ dateFormat(member.joined_at, "ddd, mmm dS, yyyy - hh:MM:ss Z") }}</td>
+                    <td>{{ dateFormat(member.joined_at, "ddd, mmm dS, yyyy - HH:MM:ss Z") }}</td>
                 </tr>
                 <tr>
                     <th>Created Account</th>
-                    <td>{{ dateFormat(member.created_at, "ddd, mmm dS, yyyy - hh:MM:ss Z") }}</td>
+                    <td>{{ dateFormat(member.created_at, "ddd, mmm dS, yyyy - HH:MM:ss Z") }}</td>
                 </tr>
                 <tr>
                     <th>Permissions</th>
