--- a/web/src/app/components/report/report.component.html
+++ b/web/src/app/components/report/report.component.html
@@ -45,7 +45,7 @@
             </ng-template>
         </div>
     
-        <p class="footer">Case-ID: {{ report.id }}&nbsp;&nbsp;|&nbsp;&nbsp;Created {{ dateFormat(report.created, 'yyyy.mm.dd - hh:MM:ss Z') }}</p>
+        <p class="footer">Case-ID: {{ report.id }}&nbsp;&nbsp;|&nbsp;&nbsp;Created {{ dateFormat(report.created, 'yyyy.mm.dd - HH:MM:ss Z') }}</p>
     </div>
 
 </div>
