--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -59,6 +59,21 @@
                 font-weight: bold
 
 
+.settingsTile
+    background-color: $c-nqblack
+    padding: 10px
+    border-radius: 5px
+    margin-bottom: 10px
+
+    h5
+        margin-bottom: 10px !important
+
+    button
+       padding: 5px 15px
+       margin-left: auto
+       margin-right: 0px
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
+
