--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -3,6 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:200,300&display=swap')
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap')
 
 
 html, body
@@ -64,6 +65,8 @@ select
     height: fit-content
     border-radius: 5px
     margin: 0
+    font-family: 'Roboto Mono', monospace;
+    font-size: .7em
 
 .overflow-wrap
     flex-wrap: wrap
@@ -76,3 +79,6 @@ select
 
 .mw-100
     max-width: 100%
+
+.cursor-pointer
+    cursor: pointer
