--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -73,6 +73,17 @@
        margin-left: auto
        margin-right: 0px
 
+
+.btn-save
+    width: 100%
+    background-color: $c-green
+
+
+.message-inpt
+    width: 50%
+    min-width: 100px
+
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
