--- a/web/src/app/routes/guild/guild.component.sass
+++ b/web/src/app/routes/guild/guild.component.sass
@@ -84,6 +84,22 @@
     min-width: 100px
 
 
+.perms-role
+    font-size: 16px
+
+
+.permission-view
+    ul
+        list-style-type: none
+    
+    .remove-btn
+        margin-left: 10px
+        +my-auto
+        width: 16px
+        height: 16px
+        background-image: url('/assets/close.svg')
+        background-size: contain
+
 @media only screen and (max-width: 700px)
     #user-info
         height: fit-content
