--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -82,3 +82,9 @@ select
 
 .cursor-pointer
     cursor: pointer
+
+.allowed
+    background-color: transparentize($c-green, .4)
+
+.disallowed
+    background-color: transparentize($c-red, .4)
